tests/expected_invalid_parse_missing_permit_arg_comma.diag.out
<input>:17:21: error: expected ',' between arguments
            submit(mesh as pass)
                        ^^
